# 508-workflows

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  DISCORD_BOT.md  DISCORD_SLASH_COMMANDS.md  ENVIRONMENT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/five08/backend/: api.py  auth.py
apps/discord_bot/: Dockerfile  (+2 more)
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/five08/: __init__.py  jobcli.py
apps/worker/src/five08/backend/: api.py  auth.py
apps/worker/src/five08/worker/: actors.py  alembic.ini  api.py  auth.py  config.py  consumer.py  db_migrations.py  dispatcher.py  jobs.py  mailbox_resume_ingest.py  models.py
apps/worker/src/five08/worker/crm/: __init__.py  document_processor.py  docuseal_processor.py  intake_form_processor.py  people_sync.py  processor.py  resume_profile_processor.py  skills_extractor.py
apps/worker/src/five08/worker/migrations/: __init__.py  env.py
apps/worker/src/five08/worker/migrations/versions/: 20260221_0100_create_jobs_table.py  20260221_0200_create_people_and_audit_events.py  20260221_0200_create_resume_processing_runs_table.py  20260221_0201_create_resume_processing_runs_table.py  20260304_0100_add_job_match_fields_to_people.py  20260304_0200_create_discord_members_table.py  20260304_0300_create_job_post_channels_table.py  20260321_0100_add_address_state_to_people.py
scripts/: format.sh  lint.sh  mypy.sh  profile_source_debug.py  resume_text_extractor.py
(+64 files in other folders)
