[project]
name = "api"
version = "0.1.0"
description = "Webhook ingest and dashboard API for 508.dev"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "PyJWT[crypto]>=2.10.1",
    "uvicorn>=0.35.0",
    "psycopg[binary]>=3.2.5",
    "redis>=6.4.0",
    "pydantic~=2.10",
    "pydantic-settings~=2.8",
    "five08",
    "worker",
]

[tool.uv.sources]
five08 = { workspace = true }
worker = { workspace = true }

[project.scripts]
backend-api = "five08.backend.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/five08"]
